modify hover state for btn sec

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both
                 a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT
                 services that keep your company running smoothly and securely.</p>
-            <a href="about.html#services" class="btn btn_sec cta">Read about us <i class="fa fa-arrow-right"></i></a>
+            <a href="about.html#services" class="btn btn_sec">Read about us <i class="fa fa-arrow-right"></i></a>
 
 
         </section>
