--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul class=" nav_items flex">
                     <li><a aria-current="page" class="nav_item" href="index.html">Home</a></li>
                     <li><a class="nav_item" href="#about">About</a></li>
-                    <li><a class="nav_item" href="#projects">Projects</a></li>
+                    <li><a class="nav_item" href="/projects/">Projects</a></li>
                     <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
