fix home page navigation links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class=" nav_items flex">
                 <li><a aria-current="page" class="nav_item" href="index.html">Home</a></li>
                 <li><a class="nav_item" href="#about">About</a></li>
-                <li><a class="nav_item" href="/projects/">Projects</a></li>
+                <li><a class="nav_item" href="#projects">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
@@ -186,7 +186,7 @@
                     </section>
                 </div>
                 <div class="case_card">
-                    <img class="card_image" src="./assets/images/server.jpg"
+                    <img class="card_image" src="/assets/images/server.jpg"
                         alt="image of a server room. img ix is printed on the wall of the server">
                     <section class="card_article">
                         <h3 class="card_title">Ant Media</h3>
@@ -270,8 +270,8 @@
             <nav>
                 <ul class=" nav_items flex">
                     <li><a class="nav_item" href="index.html">Home</a></li>
-                    <li><a class="nav_item" href="#about">About</a></li>
-                    <li><a class="nav_item" href="#projects">Projects</a></li>
+                    <li><a class="nav_item" href="about.html">About</a></li>
+                    <li><a class="nav_item" href="projects.html">Projects</a></li>
                     <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
