add and style card btn

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both
                 a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT
                 services that keep your company running smoothly and securely.</p>
-            <a href="about.html#services" class="btn btn_sec">Read about us <i class="fa fa-arrow-right"></i></a>
+            <a href="about.html#services" class="btn btn_sec">Read more about us <i class="fa fa-arrow-right"></i></a>
 
 
         </section>
@@ -66,12 +66,15 @@
 
             <!-- services cards -->
             <div class="grid services_cards ">
-                <div class="service_card card">
+                <div class="service_card card relative">
                     <img src="./assets/images/cloud-computing-4276.svg" alt="service_card_image"
                         class="service_card_image">
                     <h3 class="card_title">Cloud Computing Solutions</h3>
                     <span class="card_text">Take advantage of the latest technology with our cloud computing
                         solutions, designed to increase efficiency and reduce costs.</span>
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
+
                 </div>
                 <div class=" card">
                     <img src="./assets/images/database-security-2358.svg" alt="service_card_image"
