change cursor pointer to only the readmore btn on card

--- a/index.html
+++ b/index.html
@@ -82,12 +82,16 @@
                     <h3 class="card_title">Cyber Security and Data Protection</h3>
                     <span class="card_text">Keep your company's sensitive information secure with our
                         comprehensive cyber security solutions.</span>
+                        <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
                     <img src="./assets/images/network.svg" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Network Design and Implementation</h3>
                     <span class="card_text">Ensure a seamless and reliable network with our expert design and
                         implementation services.</span>
+                        <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
                     <img src="./assets/images/laptop-cloud-storage-12595.svg" alt="service_card_image"
@@ -95,6 +99,8 @@
                     <h3 class="card_title">Managed IT Services</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
+                        <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
                     <img src="./assets/images/programming-web-code-blue-screen-17122.svg" alt="service_card_image"
@@ -102,12 +108,16 @@
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">TGet the software your business needs with our customized software
                         development services.</span>
+                        <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
                     <img src="./assets/images/checklist-13201.svg" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">QA & Testing</h3>
                     <span class="card_text">Ensure the quality and reliability of your software with our
                         thorough quality assurance and testing services.</span>
+                        <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
                 </div>
 
             </div>
