--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h3 class="card_title">Cyber Security and Data Protection</h3>
                     <span class="card_text">Keep your company's sensitive information secure with our
                         comprehensive cyber security solutions.</span>
-                        <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -90,7 +90,7 @@
                     <h3 class="card_title">Network Design and Implementation</h3>
                     <span class="card_text">Ensure a seamless and reliable network with our expert design and
                         implementation services.</span>
-                        <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -99,7 +99,7 @@
                     <h3 class="card_title">Managed IT Services</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
-                        <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -108,7 +108,7 @@
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">TGet the software your business needs with our customized software
                         development services.</span>
-                        <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -116,7 +116,7 @@
                     <h3 class="card_title">QA & Testing</h3>
                     <span class="card_text">Ensure the quality and reliability of your software with our
                         thorough quality assurance and testing services.</span>
-                        <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
 
@@ -278,12 +278,21 @@
                 </div>
             </div>
         </section>
-        <footer>
+        <footer class="flex row">
             <!-- footer nav  -->
-            <nav>
-                <ul class=" nav_items flex">
+            <nav class="footer_nav flex row">
+                <!-- main brand logo -->
+                <section class="brand flex">
+                    <img src="/assets/images/logo.svg" alt="" class="brand_icon">
+                    <a class="brand" href="index.html">
+                        <h1><span>ByteSized</span><br> Solutions</h1>
+                    </a>
+                </section>
+                <ul class=" nav_items flex row">
+                    <h6 class="footer_nav_items_title">Navigation</h6>
                     <li><a class="nav_item" href="index.html">Home</a></li>
                     <li><a class="nav_item" href="about.html">About</a></li>
+                    <li><a class="nav_item" href="about.html/#services">Services</a></li>
                     <li><a class="nav_item" href="projects.html">Projects</a></li>
                     <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
                 </ul>
