change footer logo to white

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <nav class="footer_nav flex row">
                 <!-- main brand logo -->
                 <section class="brand flex">
-                    <img src="/assets/images/logo.svg" alt="" class="brand_icon">
+                    <img src="/assets/images/logo_white.svg" alt="" class="brand_icon">
                     <a class="brand" href="index.html">
                         <h1><span>ByteSized</span><br> Solutions</h1>
                     </a>
