style why choose us card image size

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <!-- offers cards -->
             <div class="services_cards grid">
                 <div class="card offer flex">
-                    <img src="" alt="offers_card_image" class="offers_card_image">
+                    <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt="offers_card_image" class="offers_card_image">
                     <div class="card_article">
                         <h3 class="card_title">Tailored Solutions</h3>
                         <span class="card_text">Our consultations are tailored to your specific needs and goals,
