style why choose us card

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <!-- offers cards -->
             <div class="services_cards grid">
-                <div class="card offer flex">
+                <div class="card offer flex row">
                     <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt="offers_card_image" class="offers_card_image">
                     <div class="card_article">
                         <h3 class="card_title">Tailored Solutions</h3>
@@ -137,7 +137,7 @@
                             ensuring a solution that fits your company's unique requirements.</span>
                     </div>
                 </div>
-                <div class="card flex offer">
+                <div class="card flex row offer">
                     <img src="" alt="offers_card_image" class="offers_card_image">
                     <div class="card_article">
                         <h3 class="card_title">Expert Knowledge</h3>
@@ -145,7 +145,7 @@
                             you can trust us to stay ahead of the curve.</span>
                     </div>
                 </div>
-                <div class="card offer flex">
+                <div class="card offer flex row">
                     <img src="" alt="offers_card_image" class="offers_card_image">
                     <div class="card_article">
                         <h3 class="card_title">Personalized Approach</h3>
