moved projects out of folder into root

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <!-- offers cards -->
             <div class="services_cards grid">
                 <div class="card offer flex row">
-                    <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt="offers_card_image" class="offers_card_image">
+                    <img src="/assets/images/corporate-data-management.jpg" alt="top view of an image showing hands of two men on a table. On th table are plans and blueprints on paper" class="offers_card_image">
                     <div class="card_article">
                         <h3 class="card_title">Tailored Solutions</h3>
                         <span class="card_text">Our consultations are tailored to your specific needs and goals,
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="card flex row offer">
-                    <img src="" alt="offers_card_image" class="offers_card_image">
+                    <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt="business man pointing at a futuristic hologram of technological icons and illustrations" class="offers_card_image">
                     <div class="card_article">
                         <h3 class="card_title">Expert Knowledge</h3>
                         <span class="card_text">Our team has a wealth of experience in a range of IT solutions, so
@@ -164,6 +164,7 @@
 
                 </div>
             </div>
+
         </section>
 
         <!-- get in touch banner -->
