pasted footer in about

--- a/about.html
+++ b/about.html
@@ -171,21 +171,35 @@
                         <li class="card_text">Afterwards, our pre-sales manager will provide you with project estimates
                             and an approximate
                             timeline for the project.</li>
+                            
                     </ol>
                 </div>
             </div>
 
         </section>
 
-        <footer>
-            <div class="address">
-                <h2>Location</h2>
-                <p>ByteSized Solutions
-                    123 Main Street<br />
-                    City, State ZIP Code<br />
-                    Phone: <a href="tel:+(123) 456-7890">(123) 456-7890</a><br />
-                    Email: <a href="mailto:info@bytesizedsolutions.com">info@bytesizedsolutions.com</a> </p>
+
+        <footer class="flex row">
+            <!-- footer nav  -->
+            <nav class="footer_nav flex row center">
+                <!-- main brand logo -->
+                <div class="brand_grp flex column">
+                <section class="brand flex">
+                    <img src="/assets/images/logo_white.svg" alt="" class="brand_icon">
+                    <a class="brand" href="index.html">
+                        <h1><span>ByteSized</span><br> Solutions</h1>
+                    </a>
+                </section>
             </div>
+                <ul class=" nav_items flex row">
+                    <h6 class="footer_nav_items_title">Navigation</h6>
+                    <li><a class="nav_item" href="index.html">Home</a></li>
+                    <li><a class="nav_item" href="about.html">About</a></li>
+                    <li><a class="nav_item" href="about.html/#services">Services</a></li>
+                    <li><a class="nav_item" href="projects.html">Projects</a></li>
+                    <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
+                </ul>
+            </nav>
             <p>©2023 ByteSized Solutions. All rights reserved</p>
         </footer>
 
