added wave svg background to banner

--- a/about.html
+++ b/about.html
@@ -38,14 +38,16 @@
     <!-- main site content -->
     <main>
         <!-- hero section -->
-        <section id="hero" class="hero hero2 flex row">
-            <h1 class="main_title">We are ByteSized Solutions</h1>
-            <p class="main_subtitle">Your Trusted IT Consultants</p>
-            <a href="#contact" class="btn btn_pry cta">Get In Touch</a>
-        </section>
+        <section id="hero" class="hero flex row">
+            <div class="bg_overlay"></div>
+            <div class="main_text flex row">
+                <h1 class="main_title">About ByteSized Solutions</h1>
+                <p class="main_subtitle">Get to know us a little better</p>
+            </div>
 
+        </section>
         <!-- who we are section -->
-        <section class="about container flex">
+        <section class="about container flex section_spacing">
             <h2 class="section_title">Who We Are</h2>
             <p class="section_text">We're a team of IT experts on a mission to help businesses like yours overcome their
                 tech demons. Our passion for technology and our drive to stay ahead of the curve has made us the go-to
@@ -177,7 +179,7 @@
                         <li class="card_text">Afterwards, our pre-sales manager will provide you with project estimates
                             and an approximate
                             timeline for the project.</li>
-                            
+
                     </ol>
                 </div>
             </div>
@@ -190,13 +192,13 @@
             <nav class="footer_nav flex row center">
                 <!-- main brand logo -->
                 <div class="brand_grp flex column">
-                <section class="brand flex">
-                    <img src="/assets/images/logo_white.svg" alt="" class="brand_icon">
-                    <a class="brand" href="index.html">
-                        <h1><span>ByteSized</span><br> Solutions</h1>
-                    </a>
-                </section>
-            </div>
+                    <section class="brand flex">
+                        <img src="/assets/images/logo_white.svg" alt="" class="brand_icon">
+                        <a class="brand" href="index.html">
+                            <h1><span>ByteSized</span><br> Solutions</h1>
+                        </a>
+                    </section>
+                </div>
                 <ul class=" nav_items flex row">
                     <h6 class="footer_nav_items_title">Navigation</h6>
                     <li><a class="nav_item" href="index.html">Home</a></li>
