uodated the alt texts of icons in services cards

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both
                 a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT
                 services that keep your company running smoothly and securely.</p>
-            <a href="about.html#services" class="btn btn_sec">Read more about us <i class="fa fa-arrow-right"></i></a>
+            <a href="about.html" class="btn btn_sec">Read more about us <i class="fa fa-arrow-right"></i></a>
 
 
         </section>
@@ -67,7 +67,7 @@
             <!-- services cards -->
             <div class="grid services_cards ">
                 <div class="service_card card relative">
-                    <img src="./assets/images/cloud-computing-4276.svg" alt="service_card_image"
+                    <img src="./assets/images/cloud-computing-4276.svg" alt="icon of cloud computing"
                         class="service_card_image">
                     <h3 class="card_title">Cloud Computing Solutions</h3>
                     <span class="card_text">Take advantage of the latest technology with our cloud computing
@@ -77,7 +77,7 @@
 
                 </div>
                 <div class=" card">
-                    <img src="./assets/images/database-security-2358.svg" alt="service_card_image"
+                    <img src="./assets/images/database-security-2358.svg" alt="icon of cyber security"
                         class="service_card_image">
                     <h3 class="card_title">Cyber Security and Data Protection</h3>
                     <span class="card_text">Keep your company's sensitive information secure with our
@@ -86,7 +86,7 @@
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
-                    <img src="./assets/images/network.svg" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/network.svg" alt="icon of computer network" class="service_card_image">
                     <h3 class="card_title">Network Design and Implementation</h3>
                     <span class="card_text">Ensure a seamless and reliable network with our expert design and
                         implementation services.</span>
@@ -94,7 +94,7 @@
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
-                    <img src="./assets/images/laptop-cloud-storage-12595.svg" alt="service_card_image"
+                    <img src="./assets/images/laptop-cloud-storage-12595.svg" alt="icon of cloud storage"
                         class="service_card_image">
                     <h3 class="card_title">Managed IT Services</h3>
                     <span class="card_text">Get the software your business needs with our customized software
@@ -103,7 +103,7 @@
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
-                    <img src="./assets/images/programming-web-code-blue-screen-17122.svg" alt="service_card_image"
+                    <img src="./assets/images/programming-web-code-blue-screen-17122.svg" alt="sicon of programming code symbol"
                         class="service_card_image">
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">TGet the software your business needs with our customized software
@@ -112,7 +112,7 @@
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
-                    <img src="./assets/images/checklist-13201.svg" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/checklist-13201.svg" alt="icon of a checklist" class="service_card_image">
                     <h3 class="card_title">QA & Testing</h3>
                     <span class="card_text">Ensure the quality and reliability of your software with our
                         thorough quality assurance and testing services.</span>
