add approach banner

--- a/about.html
+++ b/about.html
@@ -57,15 +57,15 @@
                 it's software development, cloud computing, or network security, our consultants have the experience and
                 knowledge to tackle any tech challenge that comes their way.
 
-                At Exorcist Systems, we believe that technology should be a tool for growth, not a hindrance. That's why
-                we take a holistic approach to our work, considering all aspects of a company's technology needs and
-                crafting custom solutions to meet those needs.
-
                 We've helped companies of all sizes, from startups to large corporations, and we're proud of the impact
                 we've made. Our clients trust us to keep their businesses running smoothly and to help them stay ahead
                 of the curve in an ever-evolving technological landscape.</p>
-
-
+        </section>
+        <section class="cta_banner section_spacing">
+            <h3 class="section_title">Our Approach Is Simple</h3>
+            <p class="section_text">At Exorcist Systems, we believe that technology should be a tool for growth, not a hindrance. That's why
+                we take a holistic approach to our work, considering all aspects of a company's technology needs and
+                crafting custom solutions to meet those needs.</p>
         </section>
 
         <!-- services section  -->
