add images to about page services article

--- a/about.html
+++ b/about.html
@@ -41,14 +41,13 @@
         <section id="hero" class="hero flex row">
             <div class="bg_overlay"></div>
             <div class="main_text flex row">
-                <h1 class="main_title">About ByteSized Solutions</h1>
-                <p class="main_subtitle">Get to know us a little better</p>
+                <h1 class="main_title">About us</h1>
             </div>
 
         </section>
         <!-- who we are section -->
         <section class="about container flex section_spacing">
-            <h2 class="section_title">Who We Are</h2>
+            <h2 class="section_title">Get to know us</h2>
             <p class="section_text">We're a team of IT experts on a mission to help businesses like yours overcome their
                 tech demons. Our passion for technology and our drive to stay ahead of the curve has made us the go-to
                 choice for companies in need of top-notch IT consulting services.
@@ -63,30 +62,37 @@
         </section>
         <section class="cta_banner section_spacing">
             <h3 class="section_title">Our Approach Is Simple</h3>
-            <p class="section_text">At Exorcist Systems, we believe that technology should be a tool for growth, not a hindrance. That's why
+            <p class="section_text">At Exorcist Systems, we believe that technology should be a tool for growth, not a
+                hindrance. That's why
                 we take a holistic approach to our work, considering all aspects of a company's technology needs and
                 crafting custom solutions to meet those needs.</p>
         </section>
 
         <!-- services section  -->
-        <section class="services container" id="services">
+        <section class="about_services container section_spacing" id="services">
             <h2 class="section_title">Our Services</h2>
+
             <p class="section_text">At ByteSized Solutions, we take a proactive and customer-centric approach to
                 delivering top-notch technology solutions. Our team is made up of experienced professionals who stay
                 ahead of the curve in terms of industry developments and advancements in cloud computing, cybersecurity,
-                and data management.
-
-                Our approach is centered around understanding our clients' unique needs and delivering customized
+                and data management.</p>
+            <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt="" class="article_image">
+            <p class="section_text"> Our approach is centered around understanding our clients' unique needs and
+                delivering customized
                 solutions that not only meet but exceed their expectations. Whether it's migrating to the cloud,
                 improving data security, or optimizing IT infrastructure, we work closely with our clients to identify
-                and address their specific challenges.
+                and address their specific challenges.</p>
+            <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt="" class="article_image">
 
-                We believe that technology should support and enhance business processes, not hinder them. That's why we
+            <p class="section_text">We believe that technology should support and enhance business processes, not hinder
+                them. That's why we
                 use a collaborative approach to find the right solutions for each of our clients. We provide expert
                 guidance and support throughout the entire process, ensuring a smooth and seamless transition to the
-                latest technology.
+                latest technology.</p>
+            <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt="" class="article_image">
 
-                At ByteSized Solutions, we pride ourselves on delivering value to our clients by streamlining processes,
+            <p class="section_text">At ByteSized Solutions, we pride ourselves on delivering value to our clients by
+                streamlining processes,
                 reducing costs, and increasing efficiency. With our approach, you can be confident that your technology
                 needs are in the hands of experts who are dedicated to helping you achieve your business goals.</p>
 
