added more articles in the about us page

--- a/about.html
+++ b/about.html
@@ -69,32 +69,41 @@
         </section>
 
         <!-- services section  -->
-        <section class="about_services container section_spacing" id="services">
+        <section class="container section_spacing grid" id="services">
             <h2 class="section_title">Our Services</h2>
+            <div class="about_services grid">
+                <p class="section_text">At ByteSized Solutions, we take a proactive and customer-centric approach to
+                    delivering top-notch technology solutions. Our team is made up of experienced professionals who stay
+                    ahead of the curve in terms of industry developments and advancements in cloud computing,
+                    cybersecurity,
+                    and data management.</p>
+                <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt=""
+                    class="article_image">
+                <p class="section_text"> Our approach is centered around understanding our clients' unique needs and
+                    delivering customized
+                    solutions that not only meet but exceed their expectations. Whether it's migrating to the cloud,
+                    improving data security, or optimizing IT infrastructure, we work closely with our clients to
+                    identify
+                    and address their specific challenges.</p>
+                <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt=""
+                    class="article_image">
 
-            <p class="section_text">At ByteSized Solutions, we take a proactive and customer-centric approach to
-                delivering top-notch technology solutions. Our team is made up of experienced professionals who stay
-                ahead of the curve in terms of industry developments and advancements in cloud computing, cybersecurity,
-                and data management.</p>
-            <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt="" class="article_image">
-            <p class="section_text"> Our approach is centered around understanding our clients' unique needs and
-                delivering customized
-                solutions that not only meet but exceed their expectations. Whether it's migrating to the cloud,
-                improving data security, or optimizing IT infrastructure, we work closely with our clients to identify
-                and address their specific challenges.</p>
-            <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt="" class="article_image">
+                <p class="section_text">We believe that technology should support and enhance business processes, not
+                    hinder
+                    them. That's why we
+                    use a collaborative approach to find the right solutions for each of our clients. We provide expert
+                    guidance and support throughout the entire process, ensuring a smooth and seamless transition to the
+                    latest technology.</p>
+                <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt=""
+                    class="article_image">
 
-            <p class="section_text">We believe that technology should support and enhance business processes, not hinder
-                them. That's why we
-                use a collaborative approach to find the right solutions for each of our clients. We provide expert
-                guidance and support throughout the entire process, ensuring a smooth and seamless transition to the
-                latest technology.</p>
-            <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt="" class="article_image">
+                <p class="section_text">At ByteSized Solutions, we pride ourselves on delivering value to our clients by
+                    streamlining processes,
+                    reducing costs, and increasing efficiency. With our approach, you can be confident that your
+                    technology
+                    needs are in the hands of experts who are dedicated to helping you achieve your business goals.</p>
 
-            <p class="section_text">At ByteSized Solutions, we pride ourselves on delivering value to our clients by
-                streamlining processes,
-                reducing costs, and increasing efficiency. With our approach, you can be confident that your technology
-                needs are in the hands of experts who are dedicated to helping you achieve your business goals.</p>
+            </div>
 
             <!-- services cards -->
             <div class="grid services_cards ">
